--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     ]
   },
   "dependencies": {
-    "eslint": "8",
+    "eslint": "^9.0.0",
     "vue": "^3.5.12"
   },
   "devDependencies": {
@@ -60,6 +60,7 @@
     "@types/node": "^22.9.0",
     "@types/postcss-pxtorem": "^6.1.0",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vitest/ui": "^2.1.5",
