--- a/packages/pilot/package.json
+++ b/packages/pilot/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^22.15.29",
     "rollup": "^4.41.1",
     "rollup-plugin-dts": "^6.2.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^2.1.9"
   }
 }
