--- a/docs/package.json
+++ b/docs/package.json
@@ -18,7 +18,7 @@
     "vitepress-demo-plugin": "^1.1.3"
   },
   "dependencies": {
-    "@versakit/directives": "workspace:*",
+    "pilot": "workspace:*",
     "vitepress-plugin-group-icons": "^1.3.3"
   }
 }
