--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "eslint": "^9.0.0",
+    "pilot-monorepo": "file:",
     "vue": "^3.5.12"
   },
   "devDependencies": {
